--- a/Project/events.html
+++ b/Project/events.html
@@ -21,10 +21,60 @@
                   <li><a href="reports.html">Reports</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
               </ul>
-          </nav>
+          </nav><br><br><br>
+
+          
+        <h1 align="center">Upcoming Events</h1>
+   
+    <main>
+        <section class="event">
+            <img src="event1.jpg" alt="Event 1">
+            <h2>Event Title 1</h2>
+            <p>Date: January 15, 20XX</p>
+            <p>Location: Event Venue 1</p>
+            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+
+        <section class="event">
+            <img src="event2.jpg" alt="Event 2">
+            <h2>Event Title 2</h2>
+            <p>Date: February 20, 20XX</p>
+            <p>Location: Event Venue 2</p>
+            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+        <!-- Add more events here -->
+    </main>
 
 
-        <script src="" async defer></script>
+    <div>   <h1 align="center">Past Events</h1>
+        <main>     
+        <section class="event">
+            <img src="event1.jpg" alt="Event 1">
+            <h2>Event Title 1</h2>
+            <p>Date: January 15, 20XX</p>
+            <p>Location: Event Venue 1</p>
+            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+
+        <section class="event">
+            <img src="event2.jpg" alt="Event 2">
+            <h2>Event Title 2</h2>
+            <p>Date: February 20, 20XX</p>
+            <p>Location: Event Venue 2</p>
+            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+    </main>
+    </div>
+
+    <footer>
+        <p>&copy; 20XX Your Website Name</p>
+    </footer>
+</body>
+</html>
+
+
+
+        <script src="script.js"></script>
     </body>
 </html>
 
