--- a/Project/index.html
+++ b/Project/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-      <marquee>  <h1>Welcome to Women's Campaign Management System</h1></marquee>
+       <h1>Welcome to Women's Campaign Management System</h1>
     </header>
 
     <nav>
@@ -60,7 +60,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </div><br><br>
       <script>
         // Set the interval for auto-rotating the carousel in milliseconds (e.g., 3000 ms = 3 seconds).
         const interval = 5000;
@@ -108,7 +108,7 @@
             </ul>
         </section>
     </main>
-
+<br>
     <footer>
         <p>&copy; 2023 Women's Campaign Management System</p>
     </footer>
