--- a/Project/reports.html
+++ b/Project/reports.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
-            <marquee>  <h1>Welcome to Women's Campaign Management System</h1></marquee>
+        <header><h1>Welcome to Women's Campaign Management System</h1>
           </header>
         
           <nav>
