--- a/Project/campaign.html
+++ b/Project/campaign.html
@@ -26,7 +26,7 @@
           <main>
             <section id="create-campaign">
                 <h2>Create a New Campaign</h2><br><br>
-                <div class="alert">Your message sent</div>
+                <div class="alert">Campaign has been added</div>
                 <form id="campaignForm" action="">
                     <label>Campaign Title:</label>
                     <input type="text" id="campaigntitle" name="campaign-title" required><br><br><br>
