--- a/Project/campaign.html
+++ b/Project/campaign.html
@@ -43,7 +43,7 @@
             </section>
         </main><br><br><br><br><br><br><br><br><br><br>
         <footer>
-            <p>&copy; 2023 Women Campaign</p>
+            <p>&copy; 2023 Women's Campaign Management System</p>
         </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
