--- a/Project/events.html
+++ b/Project/events.html
@@ -29,17 +29,17 @@
         <section class="event">
             <img src="event1.jpg" alt="Event 1">
             <h2>Event Title 1</h2>
-            <p>Date: January 15, 20XX</p>
-            <p>Location: Event Venue 1</p>
-            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Date: January 26, 2024</p>
+            <p>Location: Event Venue</p>
+            <p>Description: Republic Date event.</p>
         </section>
 
         <section class="event">
             <img src="event2.jpg" alt="Event 2">
             <h2>Event Title 2</h2>
-            <p>Date: February 20, 20XX</p>
-            <p>Location: Event Venue 2</p>
-            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Date: March 8, 2024</p>
+            <p>Location: Event Venue</p>
+            <p>Description:Women Day Event.</p>
         </section>
         <!-- Add more events here -->
     </main>
@@ -50,23 +50,23 @@
         <section class="event">
             <img src="event1.jpg" alt="Event 1">
             <h2>Event Title 1</h2>
-            <p>Date: January 15, 20XX</p>
-            <p>Location: Event Venue 1</p>
-            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Date: August 15, 2023</p>
+            <p>Location: Event Venue</p>
+            <p>Description: Independence Day Event.</p>
         </section>
 
         <section class="event">
             <img src="event2.jpg" alt="Event 2">
             <h2>Event Title 2</h2>
-            <p>Date: February 20, 20XX</p>
-            <p>Location: Event Venue 2</p>
-            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Date: August 29, 20XX</p>
+            <p>Location: Event Venue</p>
+            <p>Description: RakshaBandhan Event.</p>
         </section>
     </main>
     </div>
 
     <footer>
-        <p>&copy; 20XX Your Website Name</p>
+        <p>&copy; 2023 Women's Campaign Management System</p>
     </footer>
 </body>
 </html>
