--- a/Project/reports.html
+++ b/Project/reports.html
@@ -26,33 +26,33 @@
           <main>
             <section class="report">
                 <h2>Report Title 1</h2>
-                <p>Date: January 10, 20XX</p>
-                <p>Author: John Doe</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="report1.pdf" target="_blank">Download PDF</a>
+                <p>Date: January 10, 2023</p>
+                <p>Author: Vineeta Agarwal</p>
+                <p>Description: Annual Report.</p>
+                <a href="sample.pdf" target="_blank">Download PDF</a>
             </section>
     
             <section class="report">
                 <h2>Report Title 2</h2>
-                <p>Date: February 15, 20XX</p>
-                <p>Author: Jane Smith</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="report2.pdf" target="_blank">Download PDF</a>
+                <p>Date: February 15, 2023</p>
+                <p>Author: Ritika Saxena</p>
+                <p>Description: Republic Day Report.</p>
+                <a href="sample.pdf" target="_blank">Download PDF</a>
             </section>
             <section class="report">
                 <h2>Report Title 3</h2>
-                <p>Date: January 10, 20XX</p>
-                <p>Author: John Doe</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="report3.pdf" target="_blank">Download PDF</a>
+                <p>Date: January 10, 2023</p>
+                <p>Author: Vineeta Agarwal</p>
+                <p>Description: Womens' day Report.</p>
+                <a href="sample.pdf" target="_blank">Download PDF</a>
             </section>
     
             <section class="report">
                 <h2>Report Title 4</h2>
-                <p>Date: February 15, 20XX</p>
+                <p>Date: February 15, 2023</p>
                 <p>Author: Jane Smith</p>
-                <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="report4.pdf" target="_blank">Download PDF</a>
+                <p>Description: Rakshabandan Event Report.</p>
+                <a href="sample.pdf" target="_blank">Download PDF</a>
             </section>
         </main>
 
