--- a/Project/contact.html
+++ b/Project/contact.html
@@ -27,9 +27,9 @@
     <h1 align="center">Contact Us</h1>
     <section class="contact-info">
         <h2>Contact Information</h2>
-        <p>Email: contact@example.com</p>
-        <p>Phone: +1 (123) 456-7890</p>
-        <p>Address: 123 Main Street, City, Country</p>
+        <p>Email: womenempower@example.com</p>
+        <p>Phone:+91 9876543210</p>
+        <p>Address: 123 Main Street, Delhi, India</p>
     </section><br><br>
 
     <div class="container">
@@ -54,7 +54,7 @@
         </form>
     </div><br><br><br>
     <footer>
-        <p>&copy; 2023 Women Campaign</p>
+        <p>&copy; 2023 Women's Campaign Management System</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
