--- a/Project/reports.html
+++ b/Project/reports.html
@@ -50,7 +50,7 @@
             <section class="report">
                 <h2>Report Title 4</h2>
                 <p>Date: February 15, 2023</p>
-                <p>Author: Jane Smith</p>
+                <p>Author: Ritika Saxena</p>
                 <p>Description: Rakshabandan Event Report.</p>
                 <a href="sample.pdf" target="_blank">Download PDF</a>
             </section>
@@ -59,7 +59,7 @@
 
         
     <footer>
-        <p>&copy; 20XX Women Campaign</p>
+        <p>&copy; 2023 Women's Campaign Management System</p>
     </footer>
 
         <script src="script.js"></script>
